# fire

./: .dockerignore  Arcadefile  Cargo.toml  Dockerfile  package.json  rustfmt.toml
.buildkite/: pipeline.yml
.buildkite/hooks/: post-checkout.bat
resources/: arena.lvl  popularis.lvl
resources/animations/idle/: Idle.gltf
resources/animations/run/: Run.gltf
resources/effects/: fire.ptl  smoke.ptl
resources/models/: wizard-rigged.gltf
resources/models/Foliage/: Foliage.gltf
resources/models/Terrain01/: Terrain01.gltf
resources/models/Terrain02/: Terrain02.gltf
resources/models/Tree/: Tree.gltf
resources/models/TreesGroup/: TreeGroup.gltf
resources/models/black-plane/: Plane_Black.gltf
resources/models/fire/: Fire.gltf
resources/models/fire-monster/: fire-monster.gltf  tex_elemental.jpg.ktx
resources/models/log/: Log.gltf
resources/models/plane/: Plane.gltf
resources/models/rigged/: WizardRigged.gltf
resources/models/terrain/: Terrain.gltf
resources/models/wizard/: Wizard.gltf
resources/models/wizard-animated/: wizard-experiment.gltf
resources/textures/: fire.png.ktx  fire.xcf  smoke.png.ktx
scripts/: builder
src/: main.rs
src/client/: camera.rs  mod.rs  world.rs
src/server/: mod.rs  network_controller.rs
src/shared/: follow.rs  input.rs  mod.rs  player_controller.rs
src/shared/animations/: attack_transitions.rs  mod.rs
src/shared/components/: attack_component.rs  collisions_component.rs  enemy_ai_component.rs  health_component.rs  inventory_component.rs  lifetime_component.rs  magnetic_pickup_component.rs  mod.rs  movement_component.rs  resource_component.rs  shield_component.rs  spawn_component.rs  top_down_camera_component.rs
src/shared/game_types/: game_types.rs
src/shared/systems/: collisions.rs  combat.rs  death.rs  enemy_ai.rs  goal.rs  item_drop.rs  lifetime.rs  mod.rs  player_movement.rs  sky.rs  spawn.rs
src/utils/: goap.rs  mod.rs
static/images/logo/: original.png.ktx
(+7 files in other folders)
