# You must change these to your own details.
[package]
name = "lit"
description = "Keep the fire lit at all costs or suffer the consequences."
version = "0.1.1"
authors = ["Felipe Rocha <felipe@ultimate.games>, Noraa Stoke <noraa.july.stoke@gmail.com, noraa@ultimate.games>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[features]
client-side-only = []

[lib]
name = "mayhem"
path = "src/main.rs"
crate-type = ["cdylib"]

[[bin]]
name = "mayhem_server"
path = "src/main.rs"

[profile.dev.package.rapier3d]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
engine = { path = "../../engine" }
# engine = { version = "0.4.25", registry = "ultimate-shared" }

parry3d = { version = "0.13.1"}
log = "0.4.6"
fix-hidden-lifetime-bug = "0.2.4"
uuid = { version = "1.4.0", features = ["serde", "v4", "wasm-bindgen"] }
async-trait = "0.1.13"
serde = { version = "1.0.124", features = ["derive"] }
tagged = { version = "0.1.2", registry = "ultimate-shared" }
rand = "0.8.5"
rgoap = "0.1.0"
priority-queue = "1.3.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.18.2", default-features = false, features = [
  "io-util",
  "rt",
  "time",
  "fs",
  "macros",
  "net",
  "tracing",
] }
env_logger = "0.8"
dotenv = "0.15.0"
nalgebra = { version = "0.32.0", features = ["serde-serialize", "bytemuck"] }
rapier3d = { version = "0.17.2", features = ["wasm-bindgen"] }
num_cpus = "1.13.1"
rand = "0.8.5"
chrono = "0.4.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
parry3d = { version = "0.13.1"}
nalgebra = { version = "0.32.0", features = ["serde-serialize", "bytemuck"] }
rapier3d = { version = "0.17.2", features = ["wasm-bindgen", "simd-stable"] }
instant = "0.1"
num_cpus = "1.13.1"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.31"
